--- a/BinanceTrader/BinanceTrader/Controls/VirtualPurchaseList.xaml
+++ b/BinanceTrader/BinanceTrader/Controls/VirtualPurchaseList.xaml
@@ -20,6 +20,21 @@
                   AlternationCount="2" 
                   SelectionChanged="listViewPurchases_SelectionChanged"
                   IsSynchronizedWithCurrentItem="True">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="{x:Type ListViewItem}">
+                    <Setter Property="Tag" Value="{Binding DataContext, RelativeSource={RelativeSource AncestorType=ListView}}" />
+                    <Setter Property="ContextMenu">
+                        <Setter.Value>
+                            <ContextMenu DataContext="{Binding PlacementTarget.Tag, RelativeSource={RelativeSource Self}}">
+                                <MenuItem
+                                    Header="{m:Loc Remove From List}"
+                                    Command="{Binding RemoveVirtualPurchaseCommand}"
+                                    CommandParameter="{Binding PlacementTarget.Content, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
+                            </ContextMenu>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListView.ItemContainerStyle>
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="{m:Loc Symbol}" DisplayMemberBinding="{Binding Symbol}" Width="70" util:GridViewSort.PropertyName="Symbol"/>
