--- a/BinanceTrader/BinanceTrader/Controls/TickerList.xaml
+++ b/BinanceTrader/BinanceTrader/Controls/TickerList.xaml
@@ -1,9 +1,10 @@
-﻿<UserControl x:Class="BinanceTrader.Controls.TickerList"
+﻿<common:ControlBase x:Class="BinanceTrader.Controls.TickerList"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BinanceTrader.Controls"
+             xmlns:common="clr-namespace:BinanceTrader.Controls.Common"
              xmlns:converters="clr-namespace:BinanceTrader.Controls.Converters"
              xmlns:utils="clr-namespace:BinanceTrader.Controls.Utilitys"
              xmlns:System="clr-namespace:System;assembly=mscorlib"
@@ -20,8 +21,8 @@
     <Grid>
         <ListView Name="_listViewTickers" ItemsSource="{Binding Path=Prices}"
                   AlternationCount="2" 
-                  SelectionChanged="listViewTickers_SelectionChanged"
-                  KeyDown="listViewTickers_KeyDown"
+                  SelectionChanged="ListViewTickers_SelectionChanged"
+                  KeyDown="ListViewTickers_KeyDown"
                   IsSynchronizedWithCurrentItem="True"
                   utils:GridViewSort.AutoSort="True">
             <ListView.ItemContainerStyle>
@@ -253,4 +254,4 @@
             </ListView.View>
         </ListView>
     </Grid>
-</UserControl>
+</common:ControlBase>
